--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,9 +22,19 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".Registro"
             android:label="@string/title_activity_registro"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".RecuperarSenha"
+            android:label="@string/title_activity_recuperar"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
